Add CSS reset and default theme screenshot

--- a/wp-content/themes/mhm_parent/style.css
+++ b/wp-content/themes/mhm_parent/style.css
@@ -1,5 +1,9 @@
-/***********
-CSS for !frappant Webfactory
-Theme: frappant_default
-V0.1 / 6.6.2012 / mhm@frappant.ch
-***********/
+/*
+Theme Name: 	MHM Parent Theme
+Theme URI: 		http://www.permanenttourist.ch/
+Description: 	Basic parent theme containing essential functionality. This theme does not contain a design.
+Author: 		Mark Howells-Mead
+Author URI: 	http://www.permanenttourist.ch/
+Version: 		1.0
+Tags:
+*/
