Updates and addition of child theme starting oint

--- a/wp-content/themes/frp_wordpress_parent/style.css
+++ b/wp-content/themes/frp_wordpress_parent/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: 	!frappant WordPress Parent Theme
+Theme Name: 	!frappant Webfactory Parent Theme
 Theme URI: 		http://www.frappant.ch/
 Description: 	Basic parent theme containing essential functionality. This theme does not contain a design.
 Author: 		Mark Howells-Mead
